# imgui-template

./: .gitignore  .gitmodules  CMakeLists.txt
include/: buffer.h  config.h  defs.h  vec.hpp
src/: CMakeLists.txt  buffer.cpp  main.cpp
submodules/: CMakeLists.txt  gl3w.cmake
